--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,14 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
+            "vmArgs": "--module-path C:/Content/Openjfx/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml",
+            "mainClass": "ExerciseC.Main",
+            "projectName": "JavaFXProject3REPO_3728f318"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
             "vmArgs": "--module-path D:/study_material/JAVA/New_folder/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml",
             "mainClass": "ExerciseC.Main",
             "projectName": "JavaFXProject3REPO_c599571e"
